@@ -195,11 +195,16 @@ Toevoeging configuratieparameter bon_match_docentlesgroep_aan_leerlingklas voor 
 ** Test op lege records die uit docenten-CliXML worden gelezen.
 ** Console boodschappen
 
+## 20240222
+* Export-Magister.ps1:
+** wijziging: configuratievariabele 'brin' heet nu 'schoolid'
+** toevoeging: voorbeeldscript voor ophalen medewerker UPN m.b.v. Microsoft Graph PowerShell SDK.
 
 ## TO DO
 Dit zijn geplande wijzigingen zonder een vastgesteld tijdpad (krabbels van de auteur).
 
 * SDS V2.1 format 
+* ondersteuning voor synchronisereren van verscheidene scholen naar één profiel in School Data Sync v2.
 * parameter viewonly toont resultaat.
 * controleer omgang met ongeldige tekens, https://support.microsoft.com/en-us/office/invalid-file-names-and-file-types-in-onedrive-and-sharepoint-64883a5d-228e-48f5-b3d2-eb39e07630fa?ui=en-us&rs=en-us&ad=us#invalidcharacters
 * configuratievariabele toevoegen om het toevoegen van de vakomschrijving aan de teamnaam facultatief te maken.
